--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "* [Bootstrap 5.0](https://getbootstrap.com/docs/5.0)\r * [JQuery 3.6](https://api.jquery.com/)",
   "main": "crud.js",
   "dependencies": {
-    "@types/jquery": "^3.5.5"
+    "@types/jquery": "^3.5.5",
+    "typescript": "^4.2.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/chai": "^4.2.18",
+    "@types/mocha": "^8.2.2",
+    "chai": "^4.3.4",
+    "mocha": "^8.4.0",
+    "ts-node": "^9.1.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'"
   },
   "repository": {
     "type": "git",
