--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/slecuona/crudjs#readme",
   "devDependencies": {
     "chai": "^4.3.4",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "jsdom": "^16.5.3",
     "mocha": "^8.4.0"
